--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,7 @@
 * {
   font-family: "Inter", sans-serif;
   color: $text;
+  box-sizing: border-box;
 }
 
 *:focus {
@@ -41,6 +42,25 @@ th {
 
 tr {
   border-top: 1px solid $grey3;
+
+  @media screen and (max-width: 900px) {
+    padding: 1rem 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 0.5rem;
+
+    td,
+    th {
+      padding: 0;
+    }
+
+    td:first-child,
+    th:first-child {
+      grid-column: 1/5;
+      font-size: 1rem;
+      color: $grey2;
+    }
+  }
 }
 
 input {
@@ -91,6 +111,10 @@ label+input {
   input {
     position: absolute;
     opacity: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 
   input:checked+label {
@@ -105,6 +129,7 @@ label+input {
     border-radius: 5px;
     cursor: pointer;
     border: 3px solid $grey3;
+    height: 100%;
 
     @media screen and (min-width: 900px) {
       padding: 1rem;
