--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
 @import "vars";
 
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap");
 
 * {
   font-family: "Inter", sans-serif;
@@ -14,6 +14,10 @@
 
 body {
   background-color: $bg;
+
+  @media screen and (min-width: 900px) {
+    padding: 2rem;
+  }
 }
 
 table {
@@ -23,7 +27,6 @@ table {
 }
 
 form {
-  margin-top: 1.5rem;
   margin-bottom: 2rem;
   display: grid;
   gap: 1rem;
@@ -63,6 +66,15 @@ tr {
   }
 }
 
+.totals {
+  font-weight: 500;
+  border-width: 2px;
+
+  &+tr {
+    border-width: 2px;
+  }
+}
+
 input {
   border: 3px solid $text;
   font-size: 1.2rem;
@@ -72,7 +84,8 @@ input {
 }
 
 fieldset {
-  display: flex;
+  display: inline-flex;
+  flex-wrap: wrap;
   flex-direction: column;
   gap: 0.5rem;
   padding: 0;
@@ -177,4 +190,19 @@ a {
 
 .nil {
   color: $grey2;
+}
+
+.record-count {
+  display: block;
+  margin-bottom: 1rem;
+}
+
+.percentage {
+  &--positive {
+    color: $green;
+  }
+
+  &--negative {
+    color: $red;
+  }
 }
