--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,14 +3,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap");
 
 h1 {
-
   @media screen and (min-width: 900px) {
     font-size: 3rem;
   }
 }
 
 p {
-  font-size: 1.2rem;
   line-height: 1.4;
 
   @media screen and (min-width: 900px) {
@@ -31,6 +29,7 @@ p {
 
 body {
   background-color: $bg;
+  padding: 0.5rem;
 
   @media screen and (min-width: 900px) {
     padding: 2rem;
@@ -102,22 +101,30 @@ input {
 }
 
 fieldset {
-  display: inline-flex;
-  flex-wrap: wrap;
-  flex-direction: column;
+  display: grid;
   gap: 0.5rem;
   padding: 0;
   border: none;
 
+  @media screen and (min-width: 600px) {
+    grid-template-columns: 1fr 1fr;
+  }
+
   @media screen and (min-width: 900px) {
+    display: inline-flex;
+    flex-wrap: wrap;
     flex-direction: row;
   }
 }
 
 legend,
 label {
-  font-size: 1.2rem;
   display: block;
+  grid-column: 1/3;
+
+  @media screen and (min-width: 900px) {
+    font-size: 1.2rem;
+  }
 }
 
 legend {
